prevent account combobox from being cut off in line-item-table (#3197)

--- a/src/modules/banking/bankingRule/components/AllocationTable.module.css
+++ b/src/modules/banking/bankingRule/components/AllocationTable.module.css
@@ -2,6 +2,15 @@
   color: var(--flx-color-alert-error-link);
 }
 
+.allocationTable {
+  margin-bottom: 0;
+}
+
+/* height so the account combobox never gets cut off */
+.totals {
+  height: 10rem;
+}
+
 /* @FEELIX */
 /* need to force override the width due to
 conflicting line item table with the same
